Спринт 13. Доработал Функциональность «Рекомендации».
1) Обновил в RecommendationService, collect() на toList,
Код стал более лаконичным, а список более защищенным от изменений.